bspg/src/generate/snapshots/bevy_state_plugin_generator__generate__tests__generate_debug_info@fruits.txt_no_rustfmt.snap
---
source: src/generate/tests.rs
expression: "generate_debug_info(src_path, source)"
---
// generated by bevy_state_plugin_generator v[CARGO_PKG_VERSION]
// src: fruits.txt
// Apple Orange { O1 O2 }
