bspg/src/generate/snapshots/bevy_state_plugin_generator__generate__tests__snapshots@list_root_a_b_up_c_None_rustfmt.snap
---
source: src/generate/tests.rs
expression: "generate_all_type_definitions(vec![node], naming_scheme, None)"
---
Ok(
    [
        "Root -> Root",
        "A -> A",
        "C -> C",
        "B -> B",
    ],
)
